--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
 @model IndexModel
+@using DearCoder.Services
+@inject IFileService _fileService 
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
@@ -8,12 +10,27 @@
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
+    <div class="col-4">
+        <img id="profilePic" class="img-fluid" src="@Model.CurrentImage"/>
+    </div>
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.GivenName"></label>
+                <input asp-for="Input.GivenName" class="form-control" />
+                <span asp-validation-for="Input.GivenName" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.SurName"></label>
+                <input asp-for="Input.SurName" class="form-control" />
+                <span asp-validation-for="Input.SurName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
@@ -26,6 +43,14 @@
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.ImageFile"></label>
+                <div class="custom-file">
+                    <input asp-for="Input.ImageFile" type="file" class="form-control-file custom-file-input" />
+                    <label asp-for="Input.ImageFile" class="control-label custom-file-label">Choose</label>
+                </div>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
