--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,30 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<Blog>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!--Copy body of template landing page here-->
+<!-- main content-->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            @foreach (var blog in Model)
+            {
+                <div class="post-preview">
+                    <a href="post.html">
+                        <h2 class="post-title">@blog.Name</h2>
+                        <h3 class="post-subtitle">@blog.Description</h3>
+                    </a>
+                    <p class="post-meta">
+                        posted by Kasey Wahl
+                        <a href="#!">start bootstrap</a>
+                        on @blog.Created.ToString("MMM, dd, yyyy")
+                    </p>
+                </div>
+            }
+
+
+            <hr />
+            <!-- pager-->
+            <div class="clearfix"><a class="btn btn-primary float-right" href="#!">older posts →</a></div>
+        </div>
+    </div>
 </div>
+<hr />
