--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,23 +77,29 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarresponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">Post</a></li>
-                        <li class="nav-item"><a class="nav-link" href="post.html">Read</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Index">Blogs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Posts</a>
+                        </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
         <!-- page header-->
-        <header class="masthead" style="background-image: url('assets/img/home-bg.jpg')">
+        <header class="masthead" style="background-image: url('../../img/letterhead.jpg')">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
-                            <h1>clean blog</h1>
-                            <span class="subheading">a blog theme by start bootstrap</span>
+                            <h1 class="text-dark">Dear Coder,</h1>
+                            <span class="subheading t">Tech letters from Kasey</span>
                         </div>
                     </div>
                 </div>
