--- a/Views/Blogs/Details.cshtml
+++ b/Views/Blogs/Details.cshtml
@@ -1,4 +1,8 @@
-﻿@model DearCoder.Models.Blog
+﻿@using DearCoder.Services
+@using DearCoder.Models 
+@inject IFileService _fileService
+
+@model Blog
 
 @{
     ViewData["Title"] = "Details";
@@ -10,6 +14,9 @@
     <h4>Blog</h4>
     <hr />
     <dl class="row">
+        <div clas="col-4">
+            <img id="BlogImage" class="img-fluid rounded" src="@_fileService.DecodeImage(Model.Image, Model.ContentType)"/>
+        </div>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
