--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>clean blog - start bootstrap theme</title>
+        <title>Dear Coder | Tech Letters from Kasey</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- font awesome icons (free version)-->
         <script src="//use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -70,7 +70,7 @@
         <!-- navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainnav">
             <div class="container">
-                <a class="navbar-brand" href="index.html">start bootstrap</a>
+                <a class="navbar-brand text-light" href="index.html">Dear Coder</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarresponsive" aria-controls="navbarresponsive" aria-expanded="false" aria-label="toggle navigation">
                     menu
                     <i class="fas fa-bars"></i>
@@ -78,13 +78,13 @@
                 <div class="collapse navbar-collapse" id="navbarresponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Index">Blogs</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Blogs" asp-action="Create">Create Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Posts</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Posts" asp-action="Create">Create Post</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
-                            <h1 class="text-dark">Dear Coder,</h1>
+                            <h1 class="text-light">Dear Coder,</h1>
                             <span class="subheading t">Tech letters from Kasey</span>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                                 <a href="#!">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
