--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -10259,15 +10259,14 @@ header.masthead {
   position: relative;
   background-size: cover;
 }
-header.masthead .overlay {
+/*header.masthead .overlay {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   background-color: #212529;
-  opacity: 0.5;
-}
+}*/
 header.masthead .page-heading,
 header.masthead .post-heading,
 header.masthead .site-heading {
