--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,13 +64,14 @@
         <link href="//fonts.googleapis.com/css?family=open+sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- core theme css (includes bootstrap)-->
         <link href="~/css/styles.css" rel="stylesheet" />
+<link href="~/css/summernote-bs4.css" rel="stylesheet" />
 
     </head>
     <body>
         <!-- navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainnav">
             <div class="container">
-                <a class="navbar-brand text-light" href="index.html">Dear Coder</a>
+                <a class="navbar-brand text-dark" href="index.html">Dear Coder</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarresponsive" aria-controls="navbarresponsive" aria-expanded="false" aria-label="toggle navigation">
                     menu
                     <i class="fas fa-bars"></i>
@@ -78,14 +79,17 @@
                 <div class="collapse navbar-collapse" id="navbarresponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Blogs" asp-action="Create">Create Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Posts" asp-action="Create">Create Post</a>
-                        </li>
+                        @*@if (User.IsInRole("Administrator"))
+                        {*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Create">Create Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Create">Create Post</a>
+                            </li>
+                        @*}*@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -113,6 +117,7 @@
         </div>
         <!-- Footer-->
         <footer>
+            <hr />
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
@@ -150,6 +155,14 @@
         <!-- Bootstrap core JS-->
         <script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/summernote-bs4.js"></script>
+
+        <script>
+            $(document).ready(function () {
+                $('#Content').summernote();
+            });
+        </script>
+
         <!-- Core theme JS-->
         <script src="~/js/scripts.js"></script>
         @await RenderSectionAsync("Scripts", required: false)
