--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -26,6 +26,7 @@
                         {
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Create" asp-route-id="@Model.Id">Create New</a>
+                            <a class="badge bg-info text-decoration-none link-light" asp-action="Index">See All</a>
                         }
                     </div>
                    
@@ -129,7 +130,3 @@
     </div>
 </div>
 
-<div>
- |
-    <a asp-action="BlogPostIndex">Back to List</a>
-</div>
