--- a/Views/Posts/Create.cshtml
+++ b/Views/Posts/Create.cshtml
@@ -9,8 +9,8 @@
 
 <h4>Post</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row card">
+    <div class="col-md-12">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <textarea asp-for="Content" rows="10" class="form-control"></textarea>
+                <textarea asp-for="Content" rows="10" class="form-control w-100"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
