--- a/Views/Posts/Edit.cshtml
+++ b/Views/Posts/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model DearCoder.Models.Post
+﻿@using DearCoder.Enums
+@model DearCoder.Models.Post
 
 @{
     ViewData["Title"] = "Edit";
@@ -9,14 +10,22 @@
 <h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ContentType" />
+            <input type="hidden" asp-for=" ImageData" />
+            <input type="hidden" asp-for="Content" />
             <div class="form-group">
                 <label asp-for="BlogId" class="control-label"></label>
                 <select asp-for="BlogId" class="form-control" asp-items="ViewBag.BlogId"></select>
                 <span asp-validation-for="BlogId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input type="file" name="newImageFile" asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -30,27 +39,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <input asp-for="Content" class="form-control" rows="20" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Updated" class="control-label"></label>
-                <input asp-for="Updated" class="form-control" />
-                <span asp-validation-for="Updated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="PublishState" class="control-label"></label>
-                <select asp-for="PublishState" class="form-control"></select>
+                <select asp-for="PublishState" asp-items="@Html.GetEnumSelectList<PublishState>()" class="form-control"></select>
                 <span asp-validation-for="PublishState" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -61,7 +55,8 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-route-id="@Model.Id">Back to Post</a> |
+    <a asp-action="Index" asp-controller="Home">Home</a>
 </div>
 
 @section Scripts {
