BasicSlugService added | redirect "see all" fix.

--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -26,7 +26,7 @@
                         {
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Edit" asp-route-id="@Model.Post.Id">Edit</a>
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Create" asp-route-id="@Model.Post.Id">Create New</a>
-                            <a class="badge bg-info text-decoration-none link-light" asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@Model.Post.Id">See All</a>
+                            <a class="badge bg-info text-decoration-none link-light" asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@Model.Post.BlogId">See All</a>
                         }
                     </div>
 
