Added email service.

--- a/Views/Posts/Edit.cshtml
+++ b/Views/Posts/Edit.cshtml
@@ -54,7 +54,7 @@
 </div>
 
 <div>
-    <a asp-action="Details" asp-route-id="@Model.Id">Back to Post</a> |
+    <a asp-action="Details" asp-route-slug="@Model.Slug">Back to Post</a> |
     <a asp-action="Index" asp-controller="Home">Home</a>
 </div>
 
