Links fixed, added delete button to details page for authorized users.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                         </a>
                         <p class="post-meta">
                             posted by
-                            <a href="#!">Kasey Wahl</a>
+                            <a href="https://kaseywahl.io/about.html" target="_blank">Kasey Wahl</a>
                             on @blog.Created.ToString("MMM, dd, yyyy")
                         </p>
                         <div class="col">
