--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -25,6 +25,7 @@
                         @if (User.IsInRole("Administrator"))
                         {
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Edit" asp-route-id="@Model.Post.Id">Edit</a>
+                            <a class="badge bg-info text-decoration-none link-light" asp-action="Delete" asp-route-id="@Model.Post.Id">Delete</a>
                             <a class="badge bg-info text-decoration-none link-light" asp-action="Create" asp-route-id="@Model.Post.Id">Create New</a>
                             <a class="badge bg-info text-decoration-none link-light" asp-controller="Posts" asp-action="BlogPostIndex" asp-route-id="@Model.Post.BlogId">See All</a>
                         }
