ViewData Header and Subheader Added to Controllers

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,8 +53,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
-                            <h1 class="text-dark">Dear Coder,</h1>
-                            <span class="subheading text-dark font-weight-bold">Tech letters from Kasey</span>
+                            <h1 class="text-dark">@ViewData["HeaderText"]</h1>
+                            <span class="subheading text-dark font-weight-bold">@ViewData["SubheaderText"]</span>
                         </div>
                     </div>
                 </div>
