--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
-﻿@using DearCoder.Services
-@model IEnumerable<Blog>
+﻿@using X.PagedList 
+@using X.PagedList.Mvc.Core 
+@using X.PagedList.Web.Common 
+@using DearCoder.Services
+
+@model IPagedList<Blog>
 @inject IFileService _fileService
 
 @{ 
@@ -42,3 +46,20 @@
     </div>
 </div>
 <hr />
+
+<div class="row">
+    <div class="col h3">
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount 
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+            new PagedListRenderOptions
+            {
+                LiElementClasses = new string[] {"page-item"},
+                PageClasses = new String[] {"page-link"}
+            })
+    </div>
+</div>
