Updated _Layout footer

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <p class="copyright text-muted">Copyright &copy; Your Website 2021</p>
+                        <p class="copyright text-muted">Copyright &copy; Dear Coder 2021</p>
                     </div>
                 </div>
             </div>
