--- a/Views/Posts/Details.cshtml
+++ b/Views/Posts/Details.cshtml
@@ -1,6 +1,10 @@
 ﻿@using DearCoder.Services
+@using Microsoft.AspNetCore.Identity 
+@using DearCoder.Enums 
 @model DearCoder.ViewModels.PostDetailsViewModel
 @inject IFileService _fileService 
+@inject UserManager<BlogUser> userManager 
+
 
 @{
     ViewData["Title"] = "Details";
@@ -44,18 +48,96 @@
 
             @*Count of total comments*@
             <div class="btn-sm btn-dark btn-block">@Model.Post.Comments.Count Comment(s)</div>
-            @foreach (var comment in Model.Post.Comments.OrderByDescending(c => c.Created))
+            @foreach (var comment in Model.Post.Comments)
             {
-        <div class="d-flex mb-4">
-            <!-- Parent comment-->
-            <div class="flex-shrink-0 media p-3"><img class="rounded-circle img-fluid" style="width:60px;" src="@_fileService.DecodeImage(comment.Author.ImageData, comment.Author.ContentType)" alt="@comment.Author.FullName" /></div>
-            <div class="ms-3">
-                <div class="fw-bold">
-                    <h4>@comment.Author.FullName</h4> <small>posted on @comment.Created.ToString("MMM dd, yyyy")</small>
-                </div>
-                <div>
-                    <p>@comment.Body</p>
-                </div>
+                <div class="d-flex mb-4">
+                <!-- Parent comment-->
+                <div class="flex-shrink-0 media p-3"><img class="rounded-circle img-fluid" style="width:60px;" src="@_fileService.DecodeImage(comment.Author.ImageData, comment.Author.ContentType)" alt="@comment.Author.FullName" /></div>
+                <div class="ms-3">
+                    <div class="fw-bold">
+                        @if (comment.Moderated is null)
+                        {
+                            <h4>@comment.Author.FullName</h4> <small>posted on @comment.Created.ToString("MMM dd, yyyy")</small>
+                        }
+                        else
+                        {
+                            <h4>@comment.Author.FullName</h4> <small>posted on @comment.Created.ToString("MMM dd, yyyy")</small>
+                            <h4>This comment has been moderated because of its @comment.ModerationType</h4>
+                        }
+
+                    </div>
+                    <div>
+                        <p>@comment.Body</p>
+                        @if (User.IsInRole("Administrator") || User.IsInRole("Moderator") || (comment.Moderated is null && userManager.GetUserId(User) == comment.AuthorId))
+                        {
+                            <!-- Button trigger modal -->
+                            //Ties the button to the modal through the PK of the comment
+                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#edit-@comment.Id">
+                                Edit Comment
+                            </button>
+
+                            <!-- Modal -->
+                            //Same Id structure as the button
+                            <div class="modal fade" id="edit-@comment.Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Edit Comment</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form asp-controller="Comments" asp-action="Edit" enctype="multipart/form-data">
+                                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                <input type="hidden" asp-for="@comment.Id" />
+                                                <input type="hidden" name="id" value="@comment.Id" />
+                                                <input type="hidden" asp-for="@comment.PostId" />
+                                                <input type="hidden" asp-for="@comment.AuthorId /">
+                                                <input type="hidden" asp-for="@comment.Created" />
+
+
+                                                @if (User.IsInRole("Administrator") || User.IsInRole("Moderator"))
+                                                {
+                                                    <input asp-for="@comment.Body" type="hidden" class="form-control" />
+                                                    <div class="form-group">
+                                                        <label asp-for="@comment.ModerationType" class="control-label"></label>
+                                                        <select asp-for="@comment.ModerationType" asp-items="@Html.GetEnumSelectList<ModerationType>()" class="form-control"></select>
+                                                        <span asp-validation-for="@comment.ModerationType" class="text-danger"></span>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label class="control-label">Original Body</label>
+                                                        <textarea readonly="readonly" class="form-control" asp-for="@comment.Body"></textarea>
+
+                                                        <label asp-for="@comment.ModeratedBody" class="control-label"></label>
+                                                        <textarea asp-for="@comment.ModeratedBody" class="form-control">@comment.Body</textarea>
+                                                        <span asp-validation-for="@comment.ModeratedBody" class="text-danger"></span>
+                                                    </div>
+                                                }
+                                                else
+                                                {
+                                                    <div class="form-group">
+                                                        <label asp-for="@comment.Body" class="control-label"></label>
+                                                        <input asp-for="@comment.Body" class="form-control" />
+                                                        <span asp-validation-for="@comment.Body" class="text-danger"></span>
+                                                    </div>
+                                                }
+                                                <div class="form-group">
+                                                    <input type="submit" value="Save" class="btn btn-primary" />
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        }
+                    </div>
             </div>
             <hr />
         </div>
