Fixed PostIndex pagination issue.

--- a/Views/Posts/BlogPostIndex.cshtml
+++ b/Views/Posts/BlogPostIndex.cshtml
@@ -49,7 +49,7 @@
 
 
             <hr />
-            <!-- pager-->
+            <!-- Paged List pager-->
             <div class="row">
                 <div class="col h4">
                     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
